dark mode and style

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Klarna On-Site Messaging Preview</title>
+    <title>Klarna On-Site Messaging Gallery</title>
     <style>
         body {
             font-family: 'MS Sans Serif', Arial, sans-serif;
@@ -213,8 +213,8 @@
     ></script>
 
     <div class="container">
-        <h1>Klarna On-Site Messaging Preview</h1>
-        <p>This page demonstrates various Klarna On-Site Messaging widgets to inform customers about flexible payment options. 
+        <h1>Klarna On-Site Messaging Gallery</h1>
+        <p>This gallery showcases various Klarna On-Site Messaging widgets to inform customers about flexible payment options. 
            <a href="https://x.klarnacdn.net/merchant-vcn/peek/releases/latest/index.html#/autologin" target="_blank">Learn more</a> about Klarna On-Site Messaging.</p>
 
         <div class="controls-container">
