dark mode and style

--- a/index.html
+++ b/index.html
@@ -78,22 +78,57 @@
         }
         .controls-container {
             display: flex;
-            justify-content: space-between;
+            flex-wrap: wrap;
+            gap: 10px;
             margin-bottom: 20px;
         }
         .control-group {
-            flex: 1;
-            margin-right: 10px;
-            padding: 10px;
-            background-color: #ffe1ed;
-            border: 2px solid #ff69b4;
-            box-shadow: inset -2px -2px #dfdfdf, inset 2px 2px #808080;
+            flex: 1 1 200px;
+            min-width: 0;
         }
-        .control-group:last-child {
-            margin-right: 0;
+        .country-language {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 10px;
         }
-        #purchase-amount {
-            width: calc(100% - 30px); /* Adjust based on currency symbol width */
+        .country-language > div {
+            flex: 1 1 150px;
+        }
+        select, input[type="number"] {
+            width: 100%;
+            box-sizing: border-box;
+        }
+        .button-group {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 5px;
+        }
+        .button-group button {
+            flex: 1 1 auto;
+        }
+        @media (max-width: 768px) {
+            body {
+                padding: 10px;
+            }
+            .container {
+                padding: 10px;
+            }
+            .control-group {
+                flex-basis: 100%;
+            }
+            .country-language > div {
+                flex-basis: 100%;
+            }
+            h1 {
+                font-size: 16px;
+                padding: 5px;
+            }
+            h2 {
+                font-size: 14px;
+            }
+            h3 {
+                font-size: 12px;
+            }
         }
         .mode-selector {
             margin-left: 10px;
@@ -211,6 +246,8 @@
       src="https://js.klarna.com/web-sdk/v1/klarna.js"
       data-client-id="klarna_test_client_JDYjbjVXWGdkJEopJXBMY2xSa20lejJXTHlSJFVaR0gsYWFjZWUwZmUtMzIwMC00NzhhLTg1YmUtZjA0MTFlYzM3NTI2LDEsVzlrWWRoY1REU1dBRXFTMkw2dVNYakZhSjlsM01QUjlrNVV4MjhPZk8vdz0"
     ></script>
+
+    <div id="view-counter" style="font-family: 'Courier New', monospace; font-size: 12px; color: #00FF00; background-color: #000; padding: 5px; display: inline-block; margin-bottom: 10px; position: fixed; top: 10px; right: 10px; z-index: 1000;">Views: 00000001</div>
 
     <div class="container">
         <h1>Klarna On-Site Messaging Gallery</h1>
@@ -458,6 +495,20 @@
         const defaultCountry = document.getElementById('country-selector').value.split('-')[1];
         updateLanguageSelector(defaultCountry);
         updateWidgets();
+
+        // View counter
+        function updateViewCounter() {
+            let views = localStorage.getItem('pageViews');
+            if (views === null) {
+                views = 0;
+            }
+            views = parseInt(views) + 1;
+            localStorage.setItem('pageViews', views);
+            document.getElementById('view-counter').textContent = `Views: ${views.toString().padStart(8, '0')}`;
+        }
+
+        // Call updateViewCounter when the page loads
+        updateViewCounter();
     </script>
 </body>
 </html>
